# wyoming-stt-api

./: README.md  justfile  pyproject.toml
wyoming_stt_api/: cli.py  dependencies.py  main.py  settings.py
wyoming_stt_api/clients/: openai.py
wyoming_stt_api/services/: wyoming.py
