[project]
name = "wyoming-stt-api"
version = "0.1.0"
description = "Wyoming server running speech-to-text with API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.101.0",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.10",
]

[tool.ruff]
lint.extend-select = ["I"]

[tool.mypy]
plugins = ["pydantic.mypy"]
